--- a/index.html
+++ b/index.html
@@ -1271,6 +1271,73 @@
       </div>
     </div>
   </section>
+<section id="faq">
+  ...
+</section>
+
+<!-- ACCESSIBILITY STATEMENT -->
+<section aria-label="Website Accessibility Statement" style="padding: 28px 0;">
+  <div style="
+    max-width: 1120px;
+    margin: 0 auto;
+    padding: 0 18px;
+  ">
+    <div style="
+      background: #f6fbff;
+      border: 1px solid #d7e3ec;
+      box-shadow: 0 6px 14px rgba(11,34,48,.08);
+      padding: 18px;
+    ">
+      <h3 style="
+        margin-top: 0;
+        font-size: 18px;
+        font-weight: 800;
+        color: #0b2230;
+      ">
+        Accessibility Statement
+      </h3>
+
+      <p style="
+        margin: 0 0 10px 0;
+        font-size: 14.5px;
+        line-height: 1.6;
+        color: #425b69;
+      ">
+        We are committed to providing a website that is accessible to the widest possible audience, including seniors
+        and individuals with disabilities. We strive to improve usability and readability by following best practices
+        for clarity, contrast, and simple navigation.
+      </p>
+
+      <p style="
+        margin: 0 0 10px 0;
+        font-size: 14.5px;
+        line-height: 1.6;
+        color: #425b69;
+      ">
+        If you experience any difficulty accessing content on this website, or if you need assistance using any part
+        of the site, please let us know. We take accessibility feedback seriously and will make reasonable efforts to
+        address concerns.
+      </p>
+
+      <p style="
+        margin: 0;
+        font-size: 14.5px;
+        line-height: 1.6;
+        color: #425b69;
+      ">
+        You can contact us at
+        <a href="mailto:accessibility@agingsafelybaths.com" style="font-weight: 700; color: #0a6f7f;">
+          accessibility@agingsafelybaths.com
+        </a>
+        for accessibility-related support.
+      </p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  ...
+</footer>
 
   <!-- FOOTER -->
   <footer role="contentinfo">
